--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,9 @@
       ],
       "@server": [
         "src/Server"
+      ],
+      "@service/*": [
+        "src/service/*"
       ]
     },
     "types": [
