--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "lint": "tslint --project \"tsconfig.json\"",
     "start": "node -r module-alias/register ./dist",
     "start:dev": "nodemon --config nodemon.json",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "db:migrate": "sequelize-cli db:migrate"
   },
   "_moduleAliases": {
@@ -23,10 +25,12 @@
     "express-async-errors": "^3.1.1",
     "helmet": "^3.22.0",
     "http-status-codes": "^1.4.0",
+    "jest": "^26.0.1",
     "module-alias": "^2.2.2",
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
     "sequelize": "^5.21.9",
+    "ts-jest": "^26.0.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
@@ -35,7 +39,7 @@
     "@types/express": "^4.17.6",
     "@types/find": "^0.2.1",
     "@types/helmet": "0.0.47",
-    "@types/jasmine": "^3.5.10",
+    "@types/jest": "^25.2.2",
     "@types/jsonfile": "^6.0.0",
     "@types/morgan": "^1.9.0",
     "@types/node": "^14.0.1",
@@ -43,7 +47,6 @@
     "@types/supertest": "^2.0.9",
     "find": "^0.3.0",
     "fs-extra": "^9.0.0",
-    "jasmine": "^3.5.0",
     "jsonfile": "^6.0.1",
     "nodemon": "^2.0.4",
     "sequelize-cli": "^5.5.1",
