--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/morgan": "^1.9.0",
     "@types/node": "^14.0.1",
     "@types/sequelize": "^4.28.9",
+    "@types/sinon": "^9.0.1",
     "@types/supertest": "^2.0.9",
     "find": "^0.3.0",
     "fs-extra": "^9.0.0",
@@ -53,6 +54,7 @@
     "jsonfile": "^6.0.1",
     "nodemon": "^2.0.4",
     "sequelize-cli": "^5.5.1",
+    "sinon": "^9.0.2",
     "supertest": "^4.0.2",
     "ts-node": "^8.10.1",
     "tsconfig-paths": "^3.9.0",
